# rctf

./: .dockerignore  .env.example  .env.test  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .prettierrc.yaml  .yarnrc.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  bunfig.toml  compose.dev.yml  compose.yml  dev.Caddyfile  docker-compose.development.yml  docker-compose.yml  lint-staged.config.js  oxfmt.config.ts  oxlint.config.ts  package.json  tsconfig.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: _docker-build.yml  ci.yml  (+25 more)
apps/docker-instancer/: pyproject.toml
apps/docker-instancer/instancer/: __init__.py  __main__.py  setup.py
apps/docker-instancer/instancer/core/: cache.py  config.py  instances.py  prunner.py
apps/docker-instancer/instancer/core/instancer/: const.py  containers.py  networks.py  traefik.py  volumes.py
apps/docker-instancer/instancer/protocol/: types.py
apps/docker-instancer/instancer/routes/v1/: instances.py
apps/docker-instancer/instancer/util/: expiration.py  fs.py  logger.py  nanos.py  time.py  worker.py
bench/: README.md  interactions.ts  keyboard-checklist.md  lib.ts  lighthouse.sh  package.json  static-metrics.sh  stress-scoreboard.ts
deploy/: compose.admin-bot.yml  compose.docs.yml  install.sh
docker/: nginx.conf  supervisord.conf
docs/: mkdocs.yml  requirements.txt
scripts/: build-low-resource.ts  install.sh
tf/: gcs.tf  s3.tf
(+2781 files in other folders)
